# RooTi

./: README.md  README.rst  com.github.imsi32.RooTi.json  com.github.imsi32.Rooti.json  meson.build
data/: com.github.imsi32.RooTi.appdata.xml.in  com.github.imsi32.RooTi.desktop.in  com.github.imsi32.RooTi.gschema.xml  com.github.imsi32.Rooti.appdata.xml.in  com.github.imsi32.Rooti.desktop.in  com.github.imsi32.Rooti.gschema.xml  meson.build
data/icons/: meson.build
doc/eng/: README.rst  eng.rst  main.rst
doc/tur/: OKUBENİ.rst  ana.rst  tur.rst
po/: POTFILES  meson.build
src/: main.py  meson.build  rooti.gresource.xml  rooti.in  window.py  window.ui
src/gtk/: help-overlay.ui
src/inscriptions/: meson.build
src/inscriptions/bilge_khagan/: bilge_khagan_page.py  bilge_khagan_page.ui  bilge_khagan_slide_east.py  bilge_khagan_slide_east.ui  bilge_khagan_slide_north.py  bilge_khagan_slide_north.ui  bilge_khagan_slide_northeast.py  bilge_khagan_slide_northeast.ui  bilge_khagan_slide_south.py  bilge_khagan_slide_south.ui  bilge_khagan_slide_southeast.py  bilge_khagan_slide_southeast.ui  bilge_khagan_slide_southwest.py  bilge_khagan_slide_southwest.ui  bilge_khagan_slide_west.py  bilge_khagan_slide_west.ui  meson.build
src/inscriptions/koltigin/: koltigin_page.py  koltigin_page.ui  koltigin_slide_east.py  koltigin_slide_east.ui  koltigin_slide_north.py  koltigin_slide_north.ui  koltigin_slide_northeast.py  koltigin_slide_northeast.ui  koltigin_slide_south.py  koltigin_slide_south.ui  koltigin_slide_southeast.py  koltigin_slide_southeast.ui  koltigin_slide_southwest.py  koltigin_slide_southwest.ui  koltigin_slide_west.py  koltigin_slide_west.ui  meson.build
src/inscriptions/kul_tigin/: kul_tigin_page.py  kul_tigin_page.ui  meson.build
src/inscriptions/tonyukuk/: meson.build  slide_first_stone_east.py  slide_first_stone_east.ui  slide_first_stone_north.py  slide_first_stone_north.ui  slide_first_stone_south.py  slide_first_stone_south.ui  slide_first_stone_west.py  slide_first_stone_west.ui  slide_second_stone_east.py  slide_second_stone_east.ui  slide_second_stone_north.py  slide_second_stone_north.ui  slide_second_stone_south.py  slide_second_stone_south.ui  slide_second_stone_west.py  slide_second_stone_west.ui  tonyukuk_page.py  tonyukuk_page.ui  tonyukuk_slide_first_stone_east.py  tonyukuk_slide_first_stone_east.ui  tonyukuk_slide_first_stone_north.py  tonyukuk_slide_first_stone_north.ui  tonyukuk_slide_first_stone_south.py  tonyukuk_slide_first_stone_south.ui  tonyukuk_slide_first_stone_west.py  tonyukuk_slide_first_stone_west.ui  tonyukuk_slide_second_stone_east.py  tonyukuk_slide_second_stone_east.ui  tonyukuk_slide_second_stone_north.py  tonyukuk_slide_second_stone_north.ui  tonyukuk_slide_second_stone_south.py  tonyukuk_slide_second_stone_south.ui  tonyukuk_slide_second_stone_west.py  tonyukuk_slide_second_stone_west.ui
